docs: add practical security guide for student startup
- Created STUDENT_STARTUP_GUIDE.md with free-tier strategy
- Pragmatic approach for student with no users yet
- Focus on RLS policies over credential rotation
- Free tier limits and scaling path documented

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables (CRITICAL - never commit these)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+
+# Secrets and credentials
+*.pem
+*.key
+*.cert
+.secrets/
+
+# API Keys and tokens
+.api-keys
+.tokens
